--- a/index.html
+++ b/index.html
@@ -12,13 +12,85 @@
 
     </header>
     <section>
-
+        <div class="container">
+            <div class="row">
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/img/kette.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Halskette aus Edelstahl mit Logo-Plakette
+                            € 109</h5>
+                          <p>Tragen Sie Modeschmuck, der Ihrem Look einen wirkungsvollen Stil-Akzent verleiht. Diese Halskette mit Anhänger aus Edelstahl ist mit einer militärisch inspirierten Plakette versehen, die das ikonische Adler-Logo von Emporio Armani zeigt.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/ring.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Cadenza Halo Diamond Ring
+                            € 1,490</h5>
+                          <p>Glittering diamonds and light-catching milgrain form an ornate halo around the center gem in this breathtaking vintage-inspired ring. Pairs of pavé diamonds nestled in marquise-shaped frames gracefully flow down the band for additional sparkle (1/5 total carat weight).</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/armband.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>LOVE ARMREIF € 6.250 </h5>
+                          <p>Das in den 1970er-Jahren in New York entstandene Schmuckmodell LOVE besiegelt die von allen Konventionen befreite Liebe. Die grafischen Schrauben, das perfekte Oval und die Eleganz machen es zu einem zeitlosen Symbol für die leidenschaftliche Liebe. Mit Diamanten besetzt, in Gelb- oder Rotgold – wie weit gehen Sie für die Liebe?</p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+        </div>
+        </div>
     </section>
     <section>
 
     </section>
     <footer>
-
+        <div class="container bg-dark">
+        <div class="row">
+            <div class="col-md-4 border border-secondary  text-light">
+              <h3>Ö-ZEITEN
+            </h3>
+              <h6><strong> Wochentags</strong> <br>
+                  Mo-Fr....9 – 20 Uhr <br>
+                  <strong> Wochenende</strong> <br>
+                Sa..........9 – 18 Uhr<br>
+              </h6>
+              <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+            </div>
+            <div class="col-md-4 border border-secondary text-light">
+              <h3>Kategorien</h3>
+              <h6>Geschenke <br>
+                    Ringe <br>
+                    Ohrringe <br>
+                    Ketten </h6>
+              <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+            </div>
+            <div class="col-md-4 border border-secondary text-light">
+              <h3>Über Uns</h3>
+              <h6>Dicount-Programm <br>
+            Fragen & Antworten <br>
+        Kontakt <br>
+    Karriere</h6>
+              <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+            </div>
+          </div>
+        </div>
     </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
